homelab/jafner-dev/first-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 5etools
spec:
  selector:
    matchLabels:
      app: 5etools
  replicas: 2
  template:
    metadata:
      labels:
        app: 5etools
    spec:
      containers:
      - name: 5etools
        image: jafner/5etools-docker
        ports:
        - containerPort: 80
